# libqasan

./: Cargo.toml  Justfile  README.md  hw  hw.c
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
asan/: Cargo.toml  Justfile  Makefile.toml  build.rs
asan/cc/include/: hooks.h  trace.h
asan/cc/src/: asprintf.c  log.c  vasprintf.c
asan/src/: host_info.rs  lib.rs  mem.rs  nostd.rs  test.rs
asan/src/allocator/: mod.rs
asan/src/allocator/backend/: dlmalloc.rs  mimalloc.rs  mod.rs
asan/src/allocator/frontend/: default.rs  mod.rs
asan/src/arch/: arm.rs  mod.rs  powerpc.rs
asan/src/exit/: libc.rs  linux.rs  mod.rs
asan/src/hooks/: aligned_alloc.rs  atoi.rs  atol.rs  atoll.rs  bcmp.rs  bzero.rs  calloc.rs  explicit_bzero.rs  fgets.rs  free.rs  malloc.rs  malloc_usable_size.rs  memalign.rs  memchr.rs  memcmp.rs  memcpy.rs  memmem.rs  memmove.rs  mempcpy.rs  memrchr.rs  memset.rs  mod.rs  posix_memalign.rs  pvalloc.rs  realloc.rs  reallocarray.rs  stpcpy.rs  strcasecmp.rs  strcasestr.rs  strcat.rs  strchr.rs  strcmp.rs  strcpy.rs  strdup.rs  strlen.rs  strncasecmp.rs  strncmp.rs  strncpy.rs  strndup.rs  strnlen.rs  (+7 more)
asan/src/hooks/mmap/: libc.rs  linux.rs
asan/src/hooks/munmap/: libc.rs  linux.rs
asan/src/hooks/read/: libc.rs  linux.rs
asan/src/hooks/write/: libc.rs  linux.rs
asan/src/host/: libc.rs  linux.rs  mod.rs
asan/src/logger/: libc.rs  linux.rs  mod.rs
asan/src/maps/: decode.rs  entry.rs  iterator.rs  libc.rs  linux.rs
asan/src/mmap/: libc.rs  linux.rs  mod.rs
asan/src/nostd/: libc.rs  linux.rs  mod.rs
asan/src/patch/: hooks.rs  mod.rs  raw.rs
asan/src/shadow/: guest.rs  host.rs  mod.rs
asan/src/symbols/: cached.rs  dlsym.rs  mod.rs  nop.rs
asan/src/tracking/: guest.rs  host.rs  mod.rs
asan/tests/: default_allocator.rs  default_frontend.rs  default_frontend_mock.rs  dlmalloc_backend.rs  guest_shadow_align.rs  guest_shadow_example.rs  guest_shadow_is_memory.rs  guest_shadow_libc_is_poison.rs  guest_shadow_libc_poison.rs  guest_shadow_linux_is_poison.rs  guest_shadow_linux_poison.rs  guest_shadow_linux_unpoison.rs  guest_shadow_unpoison.rs  guest_tracking.rs  hooks_aligned_alloc.rs  hooks_atoi.rs  hooks_atol.rs  hooks_atoll.rs  hooks_bcmp.rs  hooks_bzero.rs  hooks_calloc.rs  hooks_explicit_bzero.rs  hooks_fgets.rs  hooks_free.rs  hooks_malloc.rs  hooks_malloc_usable_size.rs  hooks_memalign.rs  hooks_memchr.rs  hooks_memcmp.rs  hooks_memcpy.rs  hooks_memmem.rs  hooks_memmove.rs  hooks_mempcpy.rs  hooks_memrchr.rs  hooks_memset.rs  hooks_posix_memalign.rs  hooks_pvalloc.rs  hooks_read_libc.rs  hooks_read_linux.rs  hooks_realloc.rs  (+28 more)
dummy_libc/: Cargo.toml  Justfile  Makefile.toml
dummy_libc/src/: lib.rs
fuzz/: Cargo.toml  Justfile  Makefile.toml
fuzz/fuzz_targets/: default_frontend.rs  default_frontend_dlmalloc.rs  default_frontend_mock.rs  guest_shadow.rs  guest_tracking.rs
gasan/: Cargo.toml  Justfile  Makefile.toml  gasan.map
gasan/src/: lib.rs
just/: env.just
just/envs/: .env.aarch64  .env.arm  .env.powerpc  .env.x86  .env.x86_64
qasan/: Cargo.toml  Justfile  Makefile.toml  qasan.map
qasan/src/: lib.rs
runner/: Cargo.toml  Justfile  Makefile.toml
runner/src/: fuzz.rs  main.rs
zasan/: Cargo.toml  Justfile  Makefile.toml  zasan.map
zasan/src/: lib.rs  mem.rs
zasan/src/arch/: arm.rs  mod.rs  powerpc.rs  x86.rs
