[package]
name = "asan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = [ "guess-layout", "dlmalloc", "guest", "host", "libc", "linux", "mimalloc", "std", "tracking" ]
dlmalloc = ["dep:dlmalloc" ]
guest = []
host = ["dep:syscalls"]
libc = ["dep:libc"]
linux = ["dep:rustix"]
mimalloc = ["dep:mimalloc"]
std = []
tracking = []
guess-layout = []

[dependencies]
bitflags = { version = "2.8.0", default-features = false }
dlmalloc = { version = "0.2.7", default-features = false, optional = true }
log = { version = "0.4.22", default-features = false }
libc = { version = "0.2.169", default-features = false, optional = true }
mimalloc = { version = "0.1.43", default-features = false, optional = true }
rustix = { version = "0.38.38", default-features = false, features = ["mm"], optional = true}
spin = { version = "0.9.8", default-features = false, features = ["lazy", "mutex", "spin_mutex"] }
syscalls = { version = "0.6.18", default-features = false, optional = true }
thiserror = { version = "2.0.11", default-features = false }

[dev-dependencies]
env_logger = { version = "0.11.6" }
mockall = { version = "0.13.1" }

[build-dependencies]
rand = "0.9.0"
page_size = "0.6.0"
libc = "0.2.169"