[package]
name = "asan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = [
  "dlmalloc",
  "guest",
  "hooks",
  "host",
  "libc",
  "linux",
  "test",
  "tracking",
]
dlmalloc = ["dep:dlmalloc"]
guest = []
hooks = []
host = ["dep:syscalls"]
libc = ["dep:libc"]
linux = ["dep:rustix"]
test = []
tracking = []

[dependencies]
bitflags = { version = "2.8.0", default-features = false }
dlmalloc = { version = "0.2.7", default-features = false, optional = true }
log = { version = "0.4.22", default-features = false }
libc = { version = "0.2.169", default-features = false, optional = true }
readonly = { version = "0.2.12", default-features = false }
rustix = { version = "0.38.38", default-features = false, features = [
  "mm",
  "process",
  "stdio",
], optional = true }
spin = { version = "0.9.8", default-features = false, features = [
  "lazy",
  "mutex",
  "spin_mutex",
] }
syscalls = { version = "0.6.18", default-features = false, optional = true }
thiserror = { version = "2.0.11", default-features = false }

[build-dependencies]
cc = { version = "1.2.13" }

[dev-dependencies]
env_logger = { version = "0.11.6" }
mockall = { version = "0.13.1" }
widestring = { version = "1.1.0" }
