[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.1" }
env_logger = { version = "0.11.6" }
lazy_static = { version = "1.5.0" }
libfuzzer-sys = { version = "0.4" }
log = { version = "0.4.22" }

[dependencies.asan]
path = "../asan"

[[bin]]
name = "guest_shadow"
path = "fuzz_targets/guest_shadow.rs"
test = false
doc = false
bench = false

[[bin]]
name = "guest_tracking"
path = "fuzz_targets/guest_tracking.rs"
test = false
doc = false
bench = false