[package]
name = "gasan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[features]

[dependencies]
asan = { path = "../asan", default-features = false, features = [
  "dlmalloc",
  "guest",
  "hooks",
  "libc",
  "linux",
  "tracking",
] }
dummy_libc = { path = "../dummy_libc", default-features = false }
ctor = { version = "0.2.9", default-features = false }
log = { version = "0.4.22", default-features = false }
