[package]
name = "gasan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[features]
default = []
test = ["asan/test", "dummy_libc/test"]

[dependencies]
asan = { path = "../asan", default-features = false, features = [
  "dlmalloc",
  "guest",
  "hooks",
  "libc",
  "mimalloc",
  "tracking",
] }
ctor = { version = "0.3.0", default-features = false }
dummy_libc = { path = "../dummy_libc", default-features = false }
log = { version = "0.4.22", default-features = false }
spin = { version = "0.9.8", default-features = false, features = [
  "lazy",
  "mutex",
  "spin_mutex",
] }
