[package]
name = "qasan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = [ "guest", "host", "linux", "libc" ]
libc = [ "asan/libc" ]
std = [ "asan/std" ]
host = [ "asan/host" ]
guest = [ "asan/guest" ]
linux = [ "asan/linux" ]

[dependencies]
asan = { path = "../asan" }
