[package]
name = "qasan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
asan = { path = "../asan", default-features = false, features = ["dlmalloc", "mimalloc", "host", "libc", "std", "tracking"] }
log = { version = "0.4.22", default-features = false }
