[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []
clippy = []
## Set emulator to big endian
be = ["libafl_qemu/be"]

#! ## Mutually exclusive architectures
arm = ["libafl_qemu/arm"]
x86_64 = ["libafl_qemu/x86_64"]
i386 = ["libafl_qemu/i386"]
aarch64 = ["libafl_qemu/aarch64"]
mips = ["libafl_qemu/mips"]
ppc = ["libafl_qemu/ppc", "be"]
hexagon = ["libafl_qemu/hexagon"]

[build-dependencies]
vergen = { version = "9.0.1", features = ["build", "cargo", "rustc", "si"] }
vergen-git2 = "1.0.1"

[dependencies]
clap = { version = "4.5.18", features = ["derive", "string"] }
env_logger = { version = "0.11.5" }
log = { version = "0.4.22" }
readonly = { version = "0.2.12" }
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "641db5f19ba5ad4c6612a460ae70504c26bbfc58" }
libafl_qemu = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "641db5f19ba5ad4c6612a460ae70504c26bbfc58" }
thiserror = { version = "2.0.11" }
